# ORNL-Internship

./: .gitignore  LICENSE  README.md  RF UCB.ipynb  RF_EI_4.ipynb  __init__-checkpoint.py  graphs_RF_EI_16.ipynb  plate_image_simulation-checkpoint.py  pyproject.toml
Results/: graphs_RF_EI_4.ipynb  results_RF_EI_1.npz  results_RF_EI_4.npz  results_RF_EI_8.npz  results_RF_UCB_4_0.1.npz
alchemy-main/src/alchemy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
color-picker-optimization/color_picker_optimization/: metrics.py  utils.py
color-picker-optimization/color_picker_optimization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
